catalog, zoom items

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2078,47 +2078,52 @@ aside {
 
 .category__item {
   position: relative; }
-  .category__item:hover .category__link {
-    width: 150%;
-    z-index: 10; }
+
+.category__column {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  width: 285px; }
 
 .category__link {
-  transform: translateX(-50%);
-  transform-style: preserve-3d;
-  perspective: 500px;
-  will-change: width;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
   display: flex;
   color: #fff;
   text-decoration: none;
   height: 100%;
   letter-spacing: 0.1em;
   transition: .3s;
-  position: absolute; }
+  left: 50%;
+  transform: translateX(-50%);
+  will-change: width;
+  position: absolute;
+  width: 100%;
+  transform-style: preserve-3d; }
   .category__link:hover {
-    background-size: 120%; }
+    z-index: 2;
+    width: 120%; }
     .category__link:hover .category__inner {
       background-color: rgba(3, 21, 27, 0.2); }
     .category__link:hover .category__title {
       color: #00ffef; }
       .category__link:hover .category__title:after {
-        width: 126px;
-        margin-left: -63px; }
+        margin-left: -63px;
+        width: 126px; }
     .category__link:hover .category__num span:after {
       right: -40px;
       width: 80px; }
 
 .category__inner {
-  transition: .3s background-color;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: .3s;
   background-color: rgba(3, 21, 27, 0.6);
   display: flex;
-  flex-direction: column;
   padding-left: 5rem;
   padding-right: 5rem;
-  padding-top: 6rem; }
+  padding-top: 6rem;
+  width: 100%; }
 
 .category__num {
   font-size: 4rem;
@@ -2137,12 +2142,11 @@ aside {
   font-family: 'proxima_novablack_italic';
   font-size: 3rem;
   line-height: 1.5;
+  min-height: 105px;
   padding-bottom: 1.5rem;
   position: relative;
   text-align: center;
-  text-transform: uppercase;
-  min-height: 105px;
-  min-height: 105px; }
+  text-transform: uppercase; }
   .category__title:after {
     border-top: 1px solid #00b3a8;
     bottom: 0;
