--- a/app/scss/_catalog.scss
+++ b/app/scss/_catalog.scss
@@ -1,6 +1,5 @@
 .categories{
 	overflow: hidden;
-	// margin-top: 0;
 	padding-top: 0 !important;
 	.d-flex{
 		height: 100%;
@@ -9,50 +8,46 @@
 
 .category{
 	&__item{
-		// transition: .3s;
 		position: relative;
-		&:hover{
-			.category{
-				&__link{
-					width: 150%;
-					z-index: 10;
-				}
-			}
-			// flex-grow: 1.5
-		}
+	}
+
+	&__column{
+		display: flex;
+		flex-direction: column;	
+		margin-left: auto;
+		margin-right: auto;
+		width: 285px;
 	}
 
 	&__link{
-
-    transform: translateX(-50%);
-    transform-style: preserve-3d;
-    perspective: 500px;
-    will-change: width;
-    width: 100%;		
-
-
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: 100%;
 		display: flex;
 		color: #fff;
 		text-decoration: none;
 		height: 100%;
 		letter-spacing: 0.1em;
 		transition: .3s;
-		position: absolute;
+	    left: 50%;
+	    transform: translateX(-50%);
+	    will-change: width;
+	    position: absolute;
+	    width: 100%;
+	    transform-style: preserve-3d;
+
 		&:hover{
-			background-size: 120%;
+			// background-size: 130%;
+			z-index: 2;
+			width: 120%;
 			.category{
 				&__inner{
 					background-color: rgba(3,21,27,.2);
+					// background-size: 130%;
+					// width: 110%;
 				}
 				&__title{
 					color: $color7;
-					&:after{
-						
-						width: 126px;
+					&:after{						
 						margin-left: -63px;
+						width: 126px;
 					}
 				}
 				&__num{
@@ -65,13 +60,16 @@
 		}
 	}
 	&__inner{
-		transition: .3s background-color;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: 100%;
+		transition: .3s;
 		background-color: rgba(3,21,27,.6);
 		display: flex;
-		flex-direction: column;
 		padding-left: 5rem;
 		padding-right: 5rem;
 		padding-top: 6rem;
+		width: 100%;
 	}
 	&__num{
 		font-size: 4rem;
@@ -91,16 +89,15 @@
 	}
 
 	&__title{
+		@extend .flex-center;
 		font-family: 'proxima_novablack_italic';
 		font-size: 3rem;
 		line-height: 1.5;
+		min-height: 105px;
 		padding-bottom: 1.5rem;
 		position: relative;
 		text-align: center;
 		text-transform: uppercase;
-		min-height: 105px;
-		@extend .flex-center;
-		min-height: 105px;
 		&:after{
 			@extend .before;
 			border-top: 1px solid $color11;
