--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -13,6 +13,7 @@
 @import 'contacts';
 @import 'about';
 @import 'catalog';
+@import 'card';
 @import 'slick';
 @import 'slick-theme';
 // @import 'cart';
