--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -88,22 +88,38 @@
 			left: -60px;
 			top: 20px;
 		}
+
+		.news{
+			position: absolute;
+			left: 0;
+			height: 395px;
+			width: 110px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			top: 20px;
+		}
 		.prevnext{
 			position: absolute;
 			left: 47px;
-			bottom: 100px;
+			bottom: 82px;
 			z-index: 100;
 		}
 		.new-title{
 			background: $color9;
-			position: absolute;
-			left: 0;
-			top: 20px;
+			// position: absolute;
+			// left: 0;
+			// top: 20px;
 			width: 110px;
 			height: 395px;
 			z-index: 99;
-			padding-left: 25px;
+			// padding-left: 25px;
 			padding-top: 18px;
+			display: flex;
+			justify-content: center;
+			img{
+				align-self: flex-start
+			}
 		}
 	}
 
